selfhost/test/typechecker/array/error_type_mismatch_bindingdecl.3.out
Error at %FILE_NAME%:1:28
Type mismatch
  |  val a: String[] = ["abcd", None]
                                ^
Expected: String
but instead found: <unknown>?
