selfhost/test/typechecker/array/error_type_mismatch_bindingdecl.3.abra
val a: String[] = ["abcd", None]